--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,19 +3,16 @@ stages:
   - test
 
 variables:
-  CACHE_DIR: .cache
-  ARTIFACTS_DIR: build
-  CI: "false"
+  NODE_VERSION: "18"
+  NPM_CONFIG_CACHE: "$CI_PROJECT_DIR/.npm"
 
 default:
-  image: node:16.18.1
-  tags:
-    - npm
-  cache:
-    key: ${CI_COMMIT_REF_SLUG}
-    paths:
-      - node_modules/
-      - .cache/
+  image: node:$NODE_VERSION
+
+cache:
+  paths:
+    - node_modules/
+    - .npm
 
 before_script:
   - npm ci
@@ -26,7 +23,7 @@ build:
     - npm run build
   artifacts:
     paths:
-      - dist
+      - build/
   only:
     - master
   allow_failure: true
@@ -36,7 +33,7 @@ build:
 test:
   stage: test
   script:
-    - npm run test
+    - npm run test -- --watchAll=false
   needs: [ ]
   only:
     - master
