--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build:
     - ls -l
     - npm run build
     - echo ls -l build
-    - ls -l build
+    - ls -lR build
     - echo Build job completed
   artifacts:
     paths:
